<resources>
    <string name="app_name">wPlayer</string>
    <string name="title_activity_data">Data</string>
    <string name="Genre">Genre</string>
    <string name="Artist">Artist</string>
    <string name="Year">Year</string>
    <string name="Name">Name</string>
    <string name="Album">Album</string>
    <string name="Songs">Songs</string>
    <string name="AlbumList">Album Grid</string>
    <string name="Playlist">PlayList</string>
    <string name="Edit">Edit</string>
    <string name="Bitrate">Bitrate</string>
    <string name="Duration">Duration</string>
    <string name="AddTo">Add to Playlist</string>
    <string name="showInfo">Show info</string>
    <string name="setRing">Set as Ringtone</string>
    <string name="orderBy">Order by Artist/Album?</string>
    <string name="sumOr">Default order is Album/Artist</string>
    <string name="delete">Delete</string>
    <string name="playfromtop">Play From Top</string>
    <string name="nottyo">Notification style</string>
    <string name="showT">Show titles?</string>

    <string name="sumnotf">Notification style.  Restart required to see changes</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->


    <string-array name="nottypes">
        <item>MediaStyle</item>
        <item>Big Artwork style</item>
        <item>Default style</item>
    </string-array>

    <string-array  name="nottypesVal">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="fonts">
        <item>Default</item>
        <item>Sansation</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="Song">Song</string>
    <string name="isCompilation">Is compilation?</string>
    <string name="vbr">Is VBR</string>
    <string name="sample">Sample rate</string>
    <string name="summP">This option changes the overall design depending on the current album art</string>
    <string name="usepa">"Use Palette whenever possible? (Min API 21)"</string>
    <string name="darkB">Use Dark background on Album view?</string>
    <string name="darksum">Only if Light mode is enabled</string>
    <string name="enableno">Enable notifications?</string>
    <string name="Notifications">Notifications</string>
    <string name="designop">Design options</string>
    <string name="uselight">Use Light theme?</string>
    <string name="usemat">Use Material Album theme? (Min API 21)</string>
    <string name="orderop">Order and Media options</string>
    <string name="runme">Run MediaScanner at start?</string>
    <string name="sumMed">This option is used to scan for new media files on the device or to add missing album artworks</string>
    <string name="deleteFrom">Delete from playlist</string>
    <string name="search">Search</string>
    <string name="Format">Format</string>

    <string name="action_settings" translatable="false">Settings</string>

    <!-- Play Icon -->
    <string name="play_icon_upper_path_data" translatable="false">M 44 32 L 44 64 L 100 64 L 100 64 Z</string>
    <string name="play_icon_bottom_path_data" translatable="false">M 44 96 L 44 64 L 100 64 L 100 64 Z</string>

    <!-- Pause Icon -->
    <string name="pause_icon_upper_path_data" translatable="false">M 32 40 L 32 56  L 96 56 L 96 40 Z</string>
    <string name="pause_icon_bottom_path_data" translatable="false">M 32 88 L 32 72 L 96 72 L 96 88 Z</string>

    <!-- Stop Icon -->
    <string name="stop_icon_upper_path_data" translatable="false">M 32 32 L 32 64 L 96 64 L 96 32 Z</string>
    <string name="stop_icon_bottom_path_data" translatable="false">M 32 96 L 32 64 L 96 64 L 96 96 Z</string>

    <!-- Groups -->
    <string name="play_icon_group_top" translatable="false">upperpart</string>
    <string name="play_icon_group_bottom" translatable="false">bottompart</string>
    <string name="play_icon_group_parts" translatable="false">parts</string>

    <!-- Path Name -->
    <string name="play_icon_top_path_name" translatable="false">upper</string>
    <string name="play_icon_bottom_path_name" translatable="false">bottom</string>

    <!-- Waves -->
    <string name="wave_1_path_data" translatable="false">M 17.502 3.5 L 14.701 3.5 C 10.99 3.5 8 5.675 8 9.455 L 8 127.75 L 24 127.75 L 24 9.455 C 24 5.675 21.213 3.5 17.502 3.5 Z</string>
    <string name="wave_2_path_data" translatable="false">M 49.502 3.5 L 46.701 3.5 C 42.99 3.5 40 5.675 40 9.455 L 40 127.75 L 56 127.75 L 56 9.455 C 56 5.675 53.213 3.5 49.502 3.5 Z</string>
    <string name="wave_3_path_data" translatable="false">M 81.502 3.5 L 78.701 3.5 C 74.99 3.5 72 5.675 72 9.455 L 72 127.75 L 88 127.75 L 88 9.455 C 88 5.675 85.213 3.5 81.502 3.5 Z</string>
    <string name="wave_4_path_data" translatable="false">M 113.502 3.5 L 110.701 3.5 C 106.99 3.5 104 5.675 104 9.455 L 104 127.75 L 120 127.75 L 120 9.455 C 120 5.675 117.213 3.5 113.502 3.5 Z</string>

    <string name="playing_identifier_group_wave_1" translatable="false">wave1</string>
    <string name="playing_identifier_group_wave_2" translatable="false">wave2</string>
    <string name="playing_identifier_group_wave_3" translatable="false">wave3</string>
    <string name="playing_identifier_group_wave_4" translatable="false">wave4</string>
</resources>